<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.enf.com.mypockettraveller.SignInActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="624dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/currentUserDataLay"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/status_text"
                android:textSize="18sp"
                android:textStyle="italic"                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginStatusText"
                android:text="@string/logged_out"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_brown"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signInname"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/blue_gray_light"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:id="@+id/actionLay"
            android:layout_below="@id/currentUserDataLay"
            android:layout_marginTop="25dp"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="visible" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:id="@+id/signOutButton"
                android:visibility="invisible" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
